<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Memóriafogas</string>
    <string name="memoria_fogas">Memóriafogas</string>
    <string name="start">Start</string>
    <string name="hozzaadGomb">Hozzáad</string>
    <string name="segitsegGomb">Segítség</string>
    <!-- Fogasok -->
    <string name="nullas">Kérem adja meg a nullához tartozó betűt!</string>
    <string name="egyes">Kérem adja meg az egyeshez tartozó betűt!</string>
    <string name="kettes">Kérem adja meg a ketteshez tartozó betűt!</string>
    <string name="harmas">Kérem adja meg a hármashoz tartozó betűt!</string>
    <string name="negyes">Kérem adja meg a négyeshez tartozó betűt!</string>
    <string name="otos">Kérem adja meg az ötöshöz tartozó betűt!</string>
    <string name="hatos">Kérem adja meg a hatoshoz tartozó betűt!</string>
    <string name="hetes">Kérem adja meg a heteshez tartozó betűt!</string>
    <string name="nyolcas">Kérem adja meg a nyolcashoz tartozó betűt!</string>
    <string name="kilences">Kérem adja meg a kilenceshez tartozó betűt!</string>
    <string name="jatekrolGomb">Játékról</string>
    <string name="segitsegSzoveg1">Az itt megadott betűk alapján tudsz a következő lépésben szavakat megadni.</string>
    <string name="betuKerdesekHiba">Nem megfelelő formátum.</string>
    <string name="kerdesLeiras">Találd ki melyik számnak/betűnek melyik a párja.</string>
    <string name="feladat">Feladat</string>
    <string name="betuKerdesekPontok">Megfelelő válaszok száma: </string>
    <string name="kerdesgeneralasBetu">Kérem adja meg a következő számhoz tartozó betűt: </string>
    <string name="kerdesgeneralasSzo">Kérem adja meg a következő számhoz tartozó szót: </string>
    <string name="betuHiba">Nem egy betűt adott meg</string>
    <string name="kihagyas">Kihagyás</string>


    <!-- Fogasok -->
    <!-- Menü -->
    <array name="menuOptions">
        <item>Gyakorlás</item>
        <item>Fogasok szerkeszétése</item>
        <item>Új számsor megadása</item>
        <item>Statisztika megtekintése</item>
        <item>Beállítások</item>
        <item>Tudnivalók</item>
    </array>
    <string name="VendegUser">Vendég</string>
    <string name="VendegTitle">Zöldfülű</string>
    <string name="LoginTitle">Belépés</string>
    <string name="LogOffTitle">Kilépés</string>
    <!-- Menü -->
    <!-- Login -->
    <string name="belepes">Bejelentkezés</string>
    <string name="nevfelirat">Felhasználónév</string>
    <string name="passwordfelirat">Jelszó</string>
    <string name="noaccount"><u>Nem rendelkezel még fiókkal? Regisztráció</u></string>
    <string name="notValidLogin">Nem megfelelő felhasználónév vagy jelszó!</string>
    <!-- Menu -->
    <!-- Register -->
    <string name="regisztraciofelirat">Regisztráció</string>
    <string name="passwordujrafelirat">Jelszó újra</string>
    <string name="kuldesgomb">Küldés</string>
    <string name="sikeresregtitle">Sikeres regisztráció</string>
    <string name="sikeresregtext">Sikeresen regsztráltál! Tovább a belépéshez.</string>
    <string name="useralreadyexists">Felhasználónév foglalt.</string>
    <string name="passwordsnotequal">Jelszavak nem egyeznek!</string>
    <!-- Register -->

    <!--UserTitles-->
    <string name="feledekeny">Feledékeny</string>
    <string name="toddler">Tipegő</string>
    <string name="skilled">Gyakorlott</string>
    <string name="expert">Verhetetlen</string>
    <string name="masterMind">Lángelme</string>
    <!--UserTitles-->
    <!--Practice mode-->
    <string name="fogasbetukgyak">Fogasok (betűk) gyakorlása</string>
    <string name="fogasszavakgyak">Fogasok (szavak) gyakorlása</string>
    <string name="fogasszamsorkgyak">Számsorok gyakorlása</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!--Practice mode-->
    <!--WordPracticeFragment -->
    <string name="noPegwordsinDB">Először meg kell adnod a szavakat!</string>
    <string name="noHintInDB">Ehhez a fogashoz nem adtál meg segítséget</string>

    <!--WordPracticeFragment -->
    <string name="kerdes_szo">Melyik szám tartozik a következö szohoz:</string>
    <string name="kerdes_betu">Melyik szám tartozik a következő betűhöz? </string>
    <string name="hiba_szo">Nem tartalmazhat számot!</string>
    <!--Fragment update -->
    <string name="setpegLetters">Betűk, szavak kezelése</string>
    <string name="setpegHints">Segítségek kezelése</string>
    <string name="setSequences">Számsorok kezelése</string>
    <!--Fragment update -->
    <!--Fragment letter update -->
    <string name="pegnumberTV">Fogas száma</string>
    <string name="pegletterTV">Betűje</string>
    <string name="pegwordTV">Szava</string>
    <string name="saveUpdates">Mentés</string>
    <string name="loginrequest">Kérem jelentezzen be!</string>
    <string name="loginrequest2">Ehhez a funkcióhoz be kell jelentkeznie. Szeretne bejelentkezni?</string>
    <string name="databaseUpdated">Sikeres adatváltozatás.</string>
    <string name="databaseUpdated2">Az adatok változatatása sikeres volt. Az oldal újra fog töltődni.</string>
    <string name="choosePeg">Válassz számot!</string>
    <string name="addNewPeg"><u>Új fogast szeretnék megadni</u></string>
    <string name="numberMandatory">Szám megadása kötelező!</string>
    <string name="numberError">Kötelező egy kétjegyű számot megadni!</string>
    <string name="letterorwordmand">Betű vagy szó megadása kötelező!</string>
    <!--Fragment letter update -->
    <string name="kerdesgeleraloBetu">Melyik szám tartozik a következö betűhöz:</string>
    <!--Fragment hint update -->
    <string name="checkhints">Segítségeid</string>
    <string name="choosepeg">Kérem válassza ki a megfelelő fogast</string>
    <string name="reminder">Emlékeztető szó</string>
    <string name="reminderPhoto">Emlékeztető kép (Maximális méret 16MB!)</string>
    <string name="above16mb1">The picture is above 16MB</string>
    <string name="above16mb2">A feltöltött kép mérete nagyobb mint 16MB kérem válasszon másikat</string>
    <string name="browse">Kép tallózása</string>
    <string name="edit">Szerkesztés</string>
    <string name="delete">Törlés</string>
    <string name="peg">Fogas száma</string>
    <string name="chooseHint1">Válassz egy segítséget</string>
    <string name="chooseHint2">Először választanod kell egy számot</string>
    <string name="invalidFormatSeq">Nem megfelelő formátum, kérem ne használjon szóközt és betűket</string>
    <!--Fragment hint update -->
    <!--Fragment sequence update -->
    <string name="sequences">Számsoraid</string>
    <string name="storyTv">Történet</string>
    <string name="chooseSeq1">"Válassz egy számsort"</string>
    <string name="chooseSeq2">"Először választanod kell egy számsort"</string>
    <!--Fragment sequence update -->
    <!--Push notification-->
    <string name="timeToPractice">"ELjött az idő a gyakorlásra!"</string>
    <string name="timeToPractice2">"Fel kell idézned az eddig tanultakat, külöben elfelejtődnek!"</string>
    <string name="addNewPegs">"Túl kevés fogasod van, adj meg újakat!"</string>
    <string name="nextPractice2">Az ideális következő gyakorlás: </string>
    <string name="nextPractice1">Következő gyakorlás</string>
    <string name="days"> nap múlva</string>
    <string name="score">Pontszám: </string>
    <!--Push notification -->
    <!--Before_sequence -->
    <string name="chooseSeqandLevel">Kérlek válassz számsort és nehézségi fokozatot!</string>
    <string name="easyLevel">Könnyű</string>
    <string name="mediumLevel">Közepes</string>
    <string name="hardLevel">Hard</string>
    <!--Before_sequence -->
    <!--Statistics-->
    <string name="statistics">Statisztika</string>
    <string name="statisticsLetter">Betűk gyakorlása:</string>
    <string name="statisticsWord">Szavak gyakorlása:</string>
    <string name="statisticsSequence">Számsorok gyakorlása:</string>
    <string name="timeInGameStat">Gyakorlással töltött idő: </string>
    <string name="min">perc</string>
    <string name="avgPoint">Átlag pontszám: </string>
    <string name="seqponints">Számsorok összpontszám: </string>
    <!--Statistics-->
    <!--Easyseqpractice-->
    <string name="easyPracTitle">Könnyű gyakorlás</string>
    <string name="mediumPracTitle">Haladó gyakorlás</string>
    <string name="hardPracTitle">Nehéz gyakorlás</string>
    <string name="righAnswer1">Helyes válasz</string>
    <string name="righAnswer2">A válasz helyes! +5 pont</string>
    <string name="righAnswer3">Right answer! +10 scores</string>
    <string name="righAnswer4">Right answer! +15 scores</string>
    <string name="wrongAnswer1">A válasz helytelen</string>
    <string name="wrongAnswer2">A válasz helytelen! +0 pont A helyes válasz: </string>
    <!--Easyseqpractice-->
    <!--Settings-->
    <string name="notificationSetting">Értesítések</string>
    <!--Settings-->
    <!--Permission-->
    <string name="Cancel">Mégsem</string>
    <string name="needPerm1">Értesítés engedély</string>
    <string name="needPerm2">Az applikációnak szüksége van engedélyre az értesítések küldéséhez</string>
    <string name="grantBtn">Biztosít</string>
    <!--Permission-->
    <!--Helps-->
    <string name="aboutPegs">A fogasokról</string>
    <string name="check">Megnéz</string>
    <string name="aboutPegsText">A memóriafogas (peg system) segítségével hatékonyan memorizálhatunk olyan véletlenszerű listákat, mint a világ 10 legnépesebb országa vagy a 12 csillagjegy.

A módszer lényege az, hogy megtanulunk egy sor állandó szót, amelyekhez később kapcsoljuk a megjegyzendő információt.\n
        Elsőként a memóriafogasokat kell létrehozni.
        Ezeknek különböző típusai vannak, ezek meghatározása teljesen absztrakt,
        felhasználófüggő: a leggyakoribbak a rímelő és a betűrend szerinti fogasok.
        Ha megjegyeztük ezeket akkor már csak annyi a feladatunk, hogy hozzárendeljük a szavakat a megjegyezendő számokhoz, ezáltal törénetet alkotva.
        A történet segíteni fog abban hogy felidézzük az adott számsort.
</string>
    <string name="chooseAbout1">Kérem válasszon</string>
    <string name="chooseAbout2">Kérem válasszon egy témát!</string>
    <!--Helps-->
</resources>