<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".before_sequence_practice">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/chooseSeqandLevel"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/seqPracListV"
            android:layout_width="match_parent"
            android:layout_height="260dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/easyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/easyLevel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/mediumBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/mediumLevel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/hardBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/hardLevel"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>