<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    android:orientation="vertical"
    tools:context=".Register">

    <TextView
        android:id="@+id/registrationTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/regisztraciofelirat"
        android:textColor="@color/white"
        android:textSize="32dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/userTv"
            android:layout_width="251dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/nevfelirat"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/usernameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:password="false"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/passwordregTv"
            android:layout_width="55dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/passwordfelirat"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordregEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:password="true"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/passwordregagTv"
            android:layout_width="58dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:text="@string/passwordujrafelirat"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/passwordregagEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            android:password="true"
            android:textColor="@color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/sendRegisterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/teal_200"
        android:onClick="registerUser"
        android:password="false"
        android:text="@string/kuldesgomb"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/alreadyExists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20dp"
        android:textStyle="bold" />

</LinearLayout>