<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".addPegAboveNineFragment" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/pegnumberTV"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/numberabovenEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pegletterTV"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/letterabovenEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pegwordTV"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/wordabovenEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="@color/colorPrimaryDark"
            android:ems="10"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <Button
            android:id="@+id/saveabovenBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/saveUpdates" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>