<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".editSequencesFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setSequences"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/seqTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:textColor="@color/white"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/storyTv"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/storyEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:foregroundTint="@color/white"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:lines="8"
            android:maxLines="10"
            android:minLines="6"
            android:scrollbars="vertical"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/saveStoryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/saveUpdates"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>